[gd_scene load_steps=27 format=3 uid="uid://dpjwpq4nl1ab4"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_oxsgp"]
[ext_resource type="Script" path="res://Scripts/dash.gd" id="3_q4b36"]
[ext_resource type="Script" path="res://Scripts/player_ray_cast.gd" id="4_yb2qi"]
[ext_resource type="PackedScene" uid="uid://dlh560kwvoe0" path="res://Scenes/Zeppelinare.tscn" id="5_ebfs6"]
[ext_resource type="PackedScene" path="res://Scenes/collect_effect.tscn" id="5_u76p8"]
[ext_resource type="PackedScene" uid="uid://dhj8vs07o5cm4" path="res://Scenes/game_manager.tscn" id="5_xy6du"]
[ext_resource type="Script" path="res://Scripts/burn.gd" id="6_en5rv"]
[ext_resource type="PackedScene" uid="uid://bh8tg8dcd3xdc" path="res://Scenes/burn_lights.tscn" id="7_dwl0e"]
[ext_resource type="Script" path="res://Scripts/rescue.gd" id="7_eep7a"]
[ext_resource type="AudioStream" uid="uid://cgtu30hsh7mqy" path="res://Sounds/leave_nut_all.wav" id="9_v0wgc"]
[ext_resource type="Script" path="res://Scripts/rescue_counter_label.gd" id="11_qii5g"]
[ext_resource type="Script" path="res://Scripts/ollon_collector.gd" id="11_yaxka"]
[ext_resource type="PackedScene" uid="uid://ccoc6a6t025my" path="res://Scenes/ollon_icon.tscn" id="11_yujoc"]
[ext_resource type="Script" path="res://Scenes/ollon_panel.gd" id="12_xulhi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gyxdj"]
radius = 0.8

[sub_resource type="BoxShape3D" id="BoxShape3D_x2xmt"]
size = Vector3(25, 1, 25)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q817u"]
bg_color = Color(1, 0, 0, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lroip"]
bg_color = Color(0.239216, 0.2, 0.2, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Animation" id="Animation_irg3h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Zeppelinare:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Zeppelinare:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_1mh1j"]
resource_name = "rescue"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Zeppelinare:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.333333, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 3, 0), Vector3(0, 3.15493, 0), Vector3(0, 1.5, 0), Vector3(0, 1.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Zeppelinare:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.2, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(-2.74618e-09, -1.5708, -0.0628668), Vector3(1.99498e-08, -1.5708, 0.47281), Vector3(0, -1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_dh1es"]
resource_name = "secure_ollon"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_60dsl"]
_data = {
"RESET": SubResource("Animation_irg3h"),
"rescue": SubResource("Animation_1mh1j"),
"secure_ollon": SubResource("Animation_dh1es")
}

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_20ki8"]

[sub_resource type="Sky" id="Sky_q2jnu"]
sky_material = SubResource("PanoramaSkyMaterial_20ki8")

[sub_resource type="Environment" id="Environment_vsdr1"]
background_mode = 1
background_color = Color(0.902517, 0.905043, 0.739199, 1)
background_energy_multiplier = 1.5
sky = SubResource("Sky_q2jnu")
ambient_light_color = Color(0.860369, 0.860369, 0.860369, 1)
ssil_radius = 3.73
ssil_intensity = 24.3
glow_enabled = true
glow_intensity = 1.5
glow_strength = 0.7
glow_bloom = 0.41
glow_hdr_threshold = 1.23
fog_enabled = true
fog_light_color = Color(0.703773, 0.731487, 0.775035, 1)
fog_light_energy = 0.83
fog_density = 0.009

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_nv6jq"]
dof_blur_far_enabled = true
dof_blur_far_distance = 180.05
dof_blur_far_transition = 4556.31
dof_blur_near_distance = 0.07
dof_blur_near_transition = 1.3

[node name="Node3D" type="Node3D"]

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
script = ExtResource("1_oxsgp")
speed = 10.0
turn_rate = 0.03

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 0, 6.99638, 6.21444)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.378, 0, 0, 0, 0.378, 0, 0, 0, 0.378, 0, 0, 0)
shape = SubResource("CapsuleShape3D_gyxdj")

[node name="Dash" type="Node" parent="Player"]
script = ExtResource("3_q4b36")
dash_bonus_speed = 15.0
dash_duration = 0.6
dash_accelleration_time_until_max_speed = 4.0
dash_cd = 0.5

[node name="RayCast3D" type="RayCast3D" parent="Player"]
target_position = Vector3(0, -5000, 0)
script = ExtResource("4_yb2qi")

[node name="Zeppelinare" parent="Player" instance=ExtResource("5_ebfs6")]
transform = Transform3D(-1.267e-06, 0, -0.35, 0, 0.35, 0, 0.35, 0, -1.267e-06, 0, 3, 0)

[node name="CollectEffect" parent="Player/Zeppelinare" instance=ExtResource("5_u76p8")]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 0, 0, 1, -3.53299, -0.475991, -0.683801)

[node name="Burn" type="Node" parent="Player"]
script = ExtResource("6_en5rv")
max_burn_time = 2.0

[node name="Rescue" type="Node" parent="Player"]
script = ExtResource("7_eep7a")
rescue_time = 1.0

[node name="rescue_sound_player" type="AudioStreamPlayer3D" parent="Player"]
volume_db = -3.047
unit_size = 6.19

[node name="Node3D" parent="Player" instance=ExtResource("7_dwl0e")]

[node name="DepositSoundPlayer" type="AudioStreamPlayer3D" parent="Player"]
stream = ExtResource("9_v0wgc")
volume_db = -10.667
pitch_scale = 2.6

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.6931, -21.8362, -0.273003)
shape = SubResource("BoxShape3D_x2xmt")

[node name="GameManager" parent="." instance=ExtResource("5_xy6du")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -38, -1, -40)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OllonCollector" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("11_yaxka")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/OllonCollector"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q817u")
script = ExtResource("12_xulhi")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/OllonCollector/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = -17

[node name="Ollon1" parent="CanvasLayer/OllonCollector/PanelContainer/HBoxContainer" instance=ExtResource("11_yujoc")]
modulate = Color(1, 1, 1, 0.329412)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 2

[node name="Ollon2" parent="CanvasLayer/OllonCollector/PanelContainer/HBoxContainer" instance=ExtResource("11_yujoc")]
modulate = Color(1, 1, 1, 0.32549)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 2

[node name="Ollon3" parent="CanvasLayer/OllonCollector/PanelContainer/HBoxContainer" instance=ExtResource("11_yujoc")]
modulate = Color(1, 1, 1, 0.32549)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 2

[node name="Ollon4" parent="CanvasLayer/OllonCollector/PanelContainer/HBoxContainer" instance=ExtResource("11_yujoc")]
modulate = Color(1, 1, 1, 0.32549)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 2

[node name="Ollon5" parent="CanvasLayer/OllonCollector/PanelContainer/HBoxContainer" instance=ExtResource("11_yujoc")]
modulate = Color(1, 1, 1, 0.32549)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.637
anchor_top = 0.028
anchor_right = 0.967
anchor_bottom = 0.128
offset_left = 9.39197
offset_top = -0.144001
offset_right = 12.0159
offset_bottom = 0.0559998
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_lroip")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 5

[node name="RescueCounter" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.721569, 0.533333, 1)
theme_override_font_sizes/font_size = 40
text = "Nuts secured: 12"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_qii5g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_60dsl")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vsdr1")
camera_attributes = SubResource("CameraAttributesPractical_nv6jq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.899703, 0.436503, 0, -0.436503, 0.899703, 0, 0.727389, 0)
light_color = Color(1, 0.855645, 0.685056, 1)
light_energy = 1.242
shadow_enabled = true

[connection signal="visibility_changed" from="Player/RayCast3D" to="Player/RayCast3D" method="_on_visibility_changed"]
